remove required ipallowlist

--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-services:
-  - name: foo
-    type: web
-    env: docker
+# 1. You need to install and enable YAML from read hat redhat.vscode-yaml
+# 2. you need to add the url of the schema to your settings.json like this:
+# "https://raw.githubusercontent.com/ff6347/vscode-render-yaml-schema/main/render.json": ["render.yaml"]
+# 3. Let's go
