--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 # 1. You need to install and enable YAML from read hat redhat.vscode-yaml
 # 2. you need to add the url of the schema to your settings.json like this:
 # "https://raw.githubusercontent.com/ff6347/vscode-render-yaml-schema/main/render.json": ["render.yaml"]
-# 3. Let's go
+# 3. Reload your winddow
+# 4. Let's go
