static sites can not have a region

--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,7 @@
 # 4. Let's go
 
 services:
-  - name: vscode-render-yaml-schema
+  - name: render.com-iac-yaml-schema
     type: web
     env: static
-    region: frankfurt
     staticPublishPath: ./
