--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@
 # 4. Let's go
 
 services:
-  - name: render.com-iac-yaml-schema
+  - name: schemas
     type: web
     env: static
     staticPublishPath: _site/
